--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "electron-quick-start",
+  "name": "Appfect",
   "version": "1.0.0",
-  "description": "A minimal Electron application",
+  "description": "A pedalboard app for instruments",
   "main": "main.js",
   "scripts": {
     "start": "electron ."
@@ -17,6 +17,10 @@
   "author": "GitHub",
   "license": "CC0-1.0",
   "devDependencies": {
-    "electron": "^1.4.1"
+    "electron": "^1.4.1",
+    "autoprefixer": "^6.3.1",
+    "gulp": "^3.9.0",
+    "gulp-postcss": "^6.0.1",
+    "gulp-sass": "^2.1.1"
   }
 }
